--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-25  Leo Liu  <sdl.web@gmail.com>
+
+	* files.texi (Files): Fix typo.
+
 2012-09-12  Glenn Morris  <rgm@gnu.org>
 
 	* debugging.texi (Using Debugger): Fix typo.
