--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2012-09-25  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Prefer POSIX timers if available.
+	They avoid a race if the timer is too close to the current time.
+	* atimer.c (alarm_timer, alarm_timer_ok) [SIGEV_SIGNAL]: New static vars.
+	(set_alarm) [SIGEV_SIGNAL]: Use POSIX timers if available.
+	(init_atimer) [SIGEV_SIGAL]: Initialize them.
+
 2012-09-25  Eli Zaretskii  <eliz@gnu.org>
 
 	* coding.c (CHAR_STRING_ADVANCE_NO_UNIFY): Make it an alias of
