--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-25  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in ($(BLD)/callproc.$(O)): Update dependencies.
+
 2012-09-25  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Prefer POSIX timers if available.
