--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-26  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in (OBJ2, GLOBAL_SOURCES): Add profiler.c.
+	($(BLD)/profiler.$(O)): New target.
+
 2012-09-25  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* profiler.c: Rename sample_profiler_* to profiler_cpu_* and
