Fix some profiler stuff on Windows (follow-up to revno:11026).
* lib-src/makefile.w32-in (obj): Add profiler.o.
* src/makefile.w32-in ($(BLD)/profiler.$(O)): Update dependencies.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-26  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in ($(BLD)/profiler.$(O)): Update dependencies.
+
 2012-09-26  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* character.h (MAYBE_UNIFY_CHAR): Remove.
