--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-26  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in (obj): Add profiler.o.
+
 2012-09-17  Glenn Morris  <rgm@gnu.org>
 
 	* ebrowse.c (version):
