--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-26  Juanma Barranquero  <lekktu@gmail.com>
+
+	* unidata/BidiMirroring.txt:
+	* unidata/UnicodeData.txt: Update to Unicode 6.2.
+
 2012-09-17  Glenn Morris  <rgm@gnu.org>
 
 	* admin.el (add-log-time-format): Declare.
