--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-27  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Check more robustly for timer_settime.
+	* merge-gnulib (GNULIB_MODULES): Add timer-time.
+
 2012-09-26  Juanma Barranquero  <lekktu@gmail.com>
 
 	* unidata/BidiMirroring.txt:
