--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-27  Glenn Morris  <rgm@gnu.org>
+
+	* admin.el (set-version): Set msdos.c's Vwindow_system_version.
+
 2012-09-27  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Check more robustly for timer_settime.
