* term.el (term-ansi-reset): Try setting term-ansi-face-already-done to nil.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-09-27  Glenn Morris  <rgm@gnu.org>
 
+	* term.el (term-ansi-reset):
+	Try setting term-ansi-face-already-done to nil.  (Bug#11785)
+
 	* vc/vc.el (vc-next-action): Only gripe about committing read-only
 	files for RCS and SCCS.  (Bug#9781)
 
