--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 	<http://lists.gnu.org/archive/html/emacs-devel/2012-09/msg00671.html>.
 	* configure.ac (gl_THREADLIB): Define to empty, since Emacs
 	does threads its own way.
+	* lib/gnulib.mk, m4/gnulib-comp.m4: Regenerate.
 
 2012-09-23  Paul Eggert  <eggert@cs.ucla.edu>
 
