--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-28  Glenn Morris  <rgm@gnu.org>
+
+	* lread.c (lisp_file_lexically_bound_p): Handle #! lines.  (Bug#12528)
+
 2012-09-27  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Check more robustly for timer_settime.
