--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-28  Tomohiro Matsuyama  <tomo@cx4a.org>
+
+	* profiler.c (sigprof_handler): Fix race condition.
+
 2012-09-28  Glenn Morris  <rgm@gnu.org>
 
 	* lread.c (lisp_file_lexically_bound_p): Handle #! lines.  (Bug#12528)
