--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-28  Leo Liu  <sdl.web@gmail.com>
+
+	* ido.el (ido-set-matches-1): Fix 2012-09-11 change.
+
 2012-09-16  Leo Liu  <sdl.web@gmail.com>
 
 	IDO: Disable match re-ordering for buffer switching.
