--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2012-09-29  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* lisp.h (struct backtrace): Remove indirection for `function' field.
+	* xdisp.c (redisplay_internal):
+	* profiler.c (record_backtrace, sigprof_handler_1):
+	* alloc.c (Fgarbage_collect):
+	* eval.c (interactive_p, Fsignal, eval_sub, Ffuncall, Fbacktrace)
+	(Fbacktrace_frame): Adjust accordingly.
+
 2012-09-28  Glenn Morris  <rgm@gnu.org>
 
 	* eval.c (Frun_hook_with_args, Frun_hook_with_args_until_success)
