--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-29  Juanma Barranquero  <lekktu@gmail.com>
+
+	* config.nt: Sync with autogen/config.in
+	(HAVE_TIMER_SETTIME): New macro.
+
 2012-09-23  Eli Zaretskii  <eliz@gnu.org>
 
 	* inc/ms-w32.h (emacs_raise): Redefine to invoke emacs_abort.
