--- a/lisp/url/ChangeLog
+++ b/lisp/url/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-29  Bastien Guerry  <bzg@gnu.org>
+
+	* url-util.el (url-insert-entities-in-string)
+	(url-build-query-string): Fix docstrings.
+
 2012-09-25  Chong Yidong  <cyd@gnu.org>
 
 	* url-parse.el (url-recreate-url-attributes):
