--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-09-29  Glenn Morris  <rgm@gnu.org>
 
+	* vc/vc-sccs.el (vc-sccs-registered): Use the progn trick to get
+	the full definition in loaddefs, rather than duplicating it.
+
 	* help-macro.el (three-step-help): No need to autoload defcustom.
 
 	* progmodes/inf-lisp.el (inferior-lisp-filter-regexp)
