Use define-minor-mode for winner-mode
* lisp/winner.el (winner-mode): Remove variable (let define-minor-mode
handle it).
(winner-dont-bind-my-keys, winner-boring-buffers, winner-mode-hook):
Doc fixes.
(winner-mode-leave-hook): Rename to winner-mode-off-hook.
(winner-mode): Use define-minor-mode.

* etc/NEWS: Mention winner-mode-hook.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -568,6 +568,9 @@ in case that is not properly encoded.
 
 ** which-function-mode now applies to all applicable major modes by default.
 
+---
+** winner-mode-hook now runs when the mode is disabled, as well as when it is
+enabled.
 
 ** FIXME something happened to ses.el, 2012-04-17.
 
